# video_translator

./: .gitignore  IMPROVEMENTS.md  README.md  main.py  pyproject.toml  stt.py
scripts/: extract_audio.py  json_to_srt.py  mt_translate.py  prosody_and_ssml.py  pt_postprocess.py  run_stt.py  run_whisperx_align.py
